# plan-tree

./: .gitignore  AGENTS.md  LICENSE  PLAN-i18n.md  README.md  index.html  package-lock.json  package.json  plan-tree.desktop  plan-tree.sh  skills-lock.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/: .skill-lock.json
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: release.yml
.opencode/: opencode.json
docs/: PRD.md  auditoria-seguridad.md
example-plugin/: index.js  manifest.json
src/: App.svelte  app.css  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  vault.rs
src/commands/: index.ts  treeCommands.ts
src/components/: CommandPalette.svelte  ErrorBoundary.svelte  LanguageSelector.svelte  LoginScreen.svelte  Logo.svelte  Modal.svelte  ModalHost.svelte  PluginErrorFallback.svelte  PluginSettings.svelte  RecoveryBanner.svelte  RecurrenceConfigModal.svelte  ShortcutHelpModal.svelte  Sidebar.svelte  UserManager.svelte
src/constants/: layout.ts
src/i18n/: en.json  es.json  index.ts
src/lib/: checksum.ts  resizeImage.ts
src/modals/: ConfirmModal.svelte  NewProjectModal.svelte  NodeDetailModal.svelte  NodeDetailModal.test.ts  RenameProjectModal.svelte  TagManagerModal.svelte
src/pages/: Calendar.svelte  Calendar.test.ts  Dashboard.svelte  Progress.svelte
src/services/: autoSaveStrategy.ts  commandRegistry.test.ts  commandRegistry.ts  dialogAdapter.ts  fsAdapter.ts  panelManager.ts  permissionVerifier.test.ts  (+21 more)
(+75 files in other folders)
