[package]
name = "app"
version = "1.1.8"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

# 🔐 vault: derivacion de clave (Argon2id) + cifrado (AES-256-GCM)
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"
aes-gcm = "0.10"
